k8s/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  labels:
    io.kompose.service: kafka
spec:
  selector:
    io.kompose.service: kafka
  ports:
    - port: 9092
  type: ClusterIP
