k8s/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  labels:
    io.kompose.service: mongodb
spec:
  selector:
    io.kompose.service: mongodb
  ports:
    - port: 27017
  type: ClusterIP
