k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    io.kompose.service: redis
spec:
  selector:
    io.kompose.service: redis
  ports:
    - port: 6379
  type: ClusterIP
