k8s/zookeeper-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  labels:
    io.kompose.service: zookeeper
spec:
  selector:
    io.kompose.service: zookeeper
  ports:
    - port: 2181
  type: ClusterIP
