k8s/pineapple-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pineapple
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pineapple
                port:
                  number: 8080
